--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="/images/icon.svg">
+    <link rel="shortcut icon" href="images/icon.svg">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
 <header class="main-head">
   <nav>
     <div class="logo">
-      <a href="index.html"><img src="/images/logo.svg" alt="Netflix Logo"></a>
+      <a href="index.html"><img src="images/logo.svg" alt="Netflix Logo"></a>
     </div>
     <div class="dropdown">
       <i class="fas fa-globe"></i>
