--- a/index.html
+++ b/index.html
@@ -17,23 +17,170 @@
 <body>
 
 <header class="main">
-    <nav>
-        <div class="logo">
-            <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
-        </div>
-        <div class="dropdown">
-            <i class="fas fa-globe"></i>
-            <select name="language" id="language" class="selector">
-                <option value="English" selected>English</option>
-                <option value="Russian">Russian</option>
-            </select>
-        </div>
-        <button class="sign-in">Sign in</button>
-    </nav>
+    <div class="wrapper">
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
+            </div>
+            <div class="dropdown">
+                <i class="fas fa-globe"></i>
+                <select name="language" id="language" class="selector">
+                    <option value="English" selected>English</option>
+                    <option value="Russian">Russian</option>
+                </select>
+            </div>
+            <button class="sign-in">Sign in</button>
+        </nav>
 
+        <div class="text-content">
+            <h1>Unlimited movies, TV <br> shows and more.</h1>
+            <p class="top">Watch anywhere. Cancel anytime.</p>
+            <p class="bottom">Ready to watch? Enter your email to create or restart your membership.</p>
+
+            <div class="form-1">
+                <input type="text" placeholder="Email address">
+                <div class="items">
+                    <button class="get-started" onclick="">Get Started</button>
+                    <i class="fal fa-angle-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<hr>
+
+<div class="wrapper">
+    <div class="enjoy">
+        <div class="enjoy-text">
+            <h1>Enjoy on your TV.</h1>
+            <p>Watch on smart TVs, Playstation,
+                Xbox, Chromecast, Apple TV, Blu-ray
+                players and more.</p>
+        </div>
+        <div class="enjoy-img">
+            <img src="images/tv.png" alt="tv">
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="wrapper">
+<div class="download">
+    <div class="mobile-img">
+        <img class="mobile-img" src="images/mobile.png" alt="mobile">
+    </div>
+    <div class="download-text">
+        <h1>Download your shows to watch offline.</h1>
+        <p>Save your favourites easily and always have something to watch.</p>
+    </div>
+</div>
+</div>
+
+<hr>
+
+<div class="wrapper">
+<div class="stream">
+    <div class="stream-content">
+        <h1>Watch Everywhere.</h1>
+        <p>Stream unlimited movies and TV
+            shows on
+            your phone, tablet, laptop,
+            and TV.</p>
+    </div>
+    <div class="mac">
+        <img class="tv-mac" src="images/tv2.png" alt="Mac">
+    </div>
+</div>
+</div>
+
+<hr>
+
+<div class="wrapper">
+<div class="kids">
+    <div class="kids-img">
+        <img src="images/kids.jpg" alt="Kids Logo">
+    </div>
+    <div class="kids-text">
+        <h1>Create profiles for kids.</h1>
+        <p>Send kids on adventures with their favourite characters in a space made for them— free with your membership.</p>
+    </div>
+</div>
+</div>
+
+<hr>
+
+<div class="wrapper">
+<section class="frequently">
+    <h2 class="title">Frequently Asked Questions</h2>
+    <div class="faq">
+        <div class="questions">
+            <h3>What is Netflix?</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+        </div>
+        <div class="answer">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+    </div>
+    <div class="faq">
+        <div class="questions">
+            <h3>How much does Netflix cost?</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+        </div>
+        <div class="answer">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+    </div>
+    <div class="faq">
+        <div class="questions">
+            <h3>Where can I watch?</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+        </div>
+        <div class="answer">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+    </div>
+    <div class="faq">
+        <div class="questions">
+            <h3>How do I cancel?</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+        </div>
+        <div class="answer">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+    </div>
+    <div class="faq">
+        <div class="questions">
+            <h3>What can I watch on Netflix?</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+        </div>
+        <div class="answer">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+    </div>
+    <div class="faq">
+        <div class="questions">
+            <h3>Is Netflix good for kids?</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg>
+        </div>
+        <div class="answer">
+            <p>'sopularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+    </div>
     <div class="text-content">
-        <h1>Unlimited movies, TV <br> shows and more.</h1>
-        <p class="top">Watch anywhere. Cancel anytime.</p>
         <p class="bottom">Ready to watch? Enter your email to create or restart your membership.</p>
 
         <div class="form-1">
@@ -44,65 +191,72 @@
             </div>
         </div>
     </div>
-</header>
-
-<hr>
-
-<section class="enjoy">
-    <div class="enjoy-text">
-        <h1>Enjoy on your TV.</h1>
-        <p>Watch on smart TVs, Playstation,
-            Xbox, Chromecast, Apple TV, Blu-ray
-            players and more.</p>
-    </div>
-    <div class="enjoy-img">
-        <img src="images/tv.png" alt="tv">
-    </div>
 </section>
+</div>
 
 <hr>
 
-<section class="download">
-    <div class="mobile-img">
-        <img class="mobile-img" src="images/mobile.png" alt="mobile">
-    </div>
-    <div class="download-text">
-        <h1>Download your shows to watch offline.</h1>
-        <p>Save your favourites easily and always have something to watch.</p>
-    </div>
-</section>
-
-<hr>
-
-<section class="freq">
-    <div class="faqs">
-        <h1>Frequently Asked Questions</h1>
-        <div class="questions">
-
-        </div>
-        </div>
-    </div>
-</section>
-
-<hr>
-
+<div class="wrapper">
 <div class="final">
     <form id="form" action="#" method="post">
         <p>Sign In</p>
         <div class="form-action">
-            <input type="text" id="email" placeholder="Email">
+            <input type="email" id="email" placeholder="Email">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
         <div class="form-action">
-            <input type="text" id="password" placeholder="Password">
+            <input type="password" id="password" placeholder="Password">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>Error message</small>
         </div>
         <button type="submit" id="signIn" class="sbt">Sign in</button>
     </form>
+</div>
+</div>
+
+<hr>
+
+
+<div class="wrapper">
+<footer class="footer">
+    <p>Questions? Call us!</p>
+    <div class="footer-column">
+        <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Investor Relations</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Speed Test</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Help Centre</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Cookie Preferences</a></li>
+            <li><a href="#">Legal Notices</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Ways to watch</a></li>
+            <li><a href="#">Corporate Information</a></li>
+            <li><a href="#">Only on Netflix</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Media Centre</a></li>
+            <li><a href="#">Terms of use</a></li>
+            <li><a href="#">Contact US</a></li>
+        </ul>
+    </div>
+    <div class="last">
+        <i class="fas fa-globe"></i>
+        <select name="language" id="language" class="selector">
+            <option value="English" selected>English</option>
+            <option value="Russian">Russian</option>
+        </select>
+    </div>
+    <p>Netflix Russia</p>
+</footer>
 </div>
 
 <script src="app.js"></script>
